--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "minimum-stability": "stable",
     "require": {
+        "php": "~5.5",
         "guzzlehttp/guzzle": "~6.0"
     }
 }
