--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": "~5.5",
+        "php": "~5.5 || >=7.0 <7.2",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
